@@ -1069,7 +1069,7 @@ webpay:
 wepay:
   client_id: "44716"
   account_id: "2080478981"
-  access_token: "STAGE_67d2e41067af064af698e9cdc185c7570e4cb3191de04d8d092357c2a9120b6c"
+  access_token: "STAGE_c91882b0bed3584b8aed0f7f515f2f05a1d40924ee6f394ce82d91018cb0f2d3"
   client_secret: "d48fefe743"
 
 # Working test credentials with AVS/CVV support, no need to replace
