@@ -2,6 +2,7 @@
 
 == HEAD
 * AuthorizeNet: Fix line items quirk [shasum]
+* WePay: Update WePay to API version 2016-12-07 [davidsantoso]
 
 == Version 1.62.0 (December 5, 2016)
 * AuthorizeNet: Map to standard AVSResult codes [shasum]
